--- a/index.html
+++ b/index.html
@@ -7,16 +7,23 @@
     <title>KYTTEN</title>
     <link rel="stylesheet" href="assets/css/grilla.css">
     <link rel="stylesheet" href="assets/css/main.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <div class="container">
-        <div id="centro_civico">
+       
             <div class="row">
                 <div class="col-12">
-                    <h1 class="titulo">Lugares</h1>
+                    <h1 class="titulo">Neko-Chan</h1>
                 </div>
+                    <picture>
+                        <source media="(max-width:510px)" srcset="assets/img/Copia-de-kitten-small.png">
+                        <source media="(max-width:844px)" srcset="assets/img/Copia-de-kitten-large.png">
+                        <source media="(max-width:1024px)" srcset="assets/img/Copia-de-kitten-medium.png">
+                        <img src="assets/img/Copia-de-kitten-medium.png" alt="">
+                    </picture>
             </div>
-        </div>
+       
     </div>
 </body>
 </html>
