--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>KYTTEN</title>
     <link rel="stylesheet" href="assets/css/grilla.css">
     <link rel="stylesheet" href="assets/css/main.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
 </head>
 <body>
     <div class="container">
